--- a/pom.xml
+++ b/pom.xml
@@ -192,6 +192,26 @@
 		   <artifactId>wizards-for-vaadin</artifactId>
 		   <version>1.1.1</version>
 		</dependency>
+		<dependency>
+		   <groupId>com.vaadin.tapio</groupId>
+		   <artifactId>googlemaps</artifactId>
+		   <version>1.3.4</version>
+		</dependency>
+		<dependency>
+		   <groupId>org.vaadin.addons</groupId>
+		   <artifactId>locationtextfield</artifactId>
+		   <version>2.1.7</version>
+		</dependency>
+		<dependency> 
+			<groupId>com.google.code.geocoder-java</groupId>
+			<artifactId>geocoder-java</artifactId>
+			<version>0.16</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		    <version>2.2.4</version>
+		</dependency>	
 	</dependencies>
 
 	<build>
