--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -17,6 +17,10 @@
 			<param-name>UI</param-name>
 			<param-value>cl.koritsu.valued.ValuedUI</param-value>
 		</init-param>
+		<init-param>
+			<param-name>widgetset</param-name>
+			<param-value>cl.koritsu.valued.ValuedWidgetSet</param-value>
+		</init-param>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>ValuedServlet</servlet-name>
