--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,11 +10,31 @@
 		<param-name>productionMode</param-name>
 		<param-value>${productionMode}</param-value>
 	</context-param>
+	
+	<!-- Spring -->
+    <context-param>
+        <description>Spring context file</description>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>classpath*:/META-INF/spring/applicationContext.xml</param-value>
+    </context-param>
+    
+       <!-- Spring listeners -->
+	<listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
+    <listener>
+        <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
+    </listener>	
+    
 	<servlet>
 		<servlet-name>ValuedServlet</servlet-name>
 		<servlet-class>cl.koritsu.valued.ValuedServlet</servlet-class>
 		<init-param>
-			<param-name>UI</param-name>
+			<param-name>beanName</param-name>
+			<param-value>valuedUI</param-value>
+		</init-param>
+		<init-param>
+			<param-name>ui</param-name>
 			<param-value>cl.koritsu.valued.ValuedUI</param-value>
 		</init-param>
 		<init-param>
