--- a/pom.xml
+++ b/pom.xml
@@ -292,14 +292,18 @@
 		    <artifactId>gson</artifactId>
 		    <version>2.2.4</version>
 		</dependency>
-		
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.36</version>
 		</dependency>	
-		
-				<dependency>
+		<!-- addon -->
+		<dependency>
+		    <groupId>org.tepi.filtertable</groupId>
+		    <artifactId>filteringtable</artifactId>
+		    <version>1.0.1.v8</version>
+		</dependency>
+		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
 			<version>4.3.1.Final</version>
