--- a/pom.xml
+++ b/pom.xml
@@ -181,6 +181,21 @@
 			<version>${spring.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core</artifactId>
+			<version>3.2.5.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>3.2.5.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>3.2.5.RELEASE</version>
+		</dependency>
 <!-- 
 		<dependency>
 			<groupId>org.springframework.security</groupId>
@@ -299,9 +314,9 @@
 		</dependency>	
 		<!-- addon -->
 		<dependency>
-		    <groupId>org.tepi.filtertable</groupId>
-		    <artifactId>filteringtable</artifactId>
-		    <version>1.0.1.v8</version>
+		   	<groupId>org.vaadin.addons</groupId>
+    		<artifactId>filteringtable</artifactId>
+    		<version>0.9.15.v7</version>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
